@@ -1,8 +1,8 @@
 Package: tidyCpp
 Type: Package
 Title: Tidy C++ Header-Only Definitions for Parts of the C API of R
-Version: 0.0.1
-Date: 2020-10-04
+Version: 0.0.1.1
+Date: 2020-10-15
 Authors@R: c(
  person("Dirk", "Eddelbuettel", role = c("aut", "cre", "cph"), email = "edd@debian.org"),
  person("Romain", "Francois", role = c("ctb", "cph"), comment="Via included file Shield.h"),
