@@ -246,6 +246,128 @@ in `PROTECT` and `UNPROTECT` and is, to our eyes, a little more readable.
 via the `Rcpp::sourceCpp()` package.)
 
 
+### Snippet Three: uchardet
+
+For the third example, we use an unrelated package:
+[uchardet](https://cran.r-project.org/package=uchardet) which provides R bindings to the eponymous
+C++ library to detect character encodings. This example cannot be sourced simply into R as it
+requires the underlying C++ library.  One can, however, download the R package and then replace
+the file `src/detect.cpp` with the content below, and add `LinkingTo: tidyCpp` to the `DESCRIPTION`
+file.
+
+```c++
+#include <tidyCpp>
+#include <R_ext/Visibility.h>
+#include <fstream>
+#include <uchardet.h>
+
+#define BUFFER_SIZE 65536
+char buffer[BUFFER_SIZE];
+
+SEXP attribute_hidden get_charset(uchardet_t handle) {
+  const char* ans = uchardet_get_charset(handle);
+  if (strlen(ans) == 0) {
+    // Rf_warning("Can not detect encoding.");
+    return NA_STRING;
+  }
+  return R::mkChar(ans);
+}
+
+SEXP attribute_hidden do_detect_sexp(SEXP x, uchardet_t handle) {
+  R_xlen_t x_len = R::xlength(x);
+  if (x_len == 0) {
+    return NA_STRING;
+  }
+  const char* x_data;
+  switch(R::Typeof(x)) {
+    case CHARSXP: {
+      if (x == NA_STRING) {
+        return NA_STRING;
+      }
+      x_data = R::charPointer(x);
+      break;
+    }
+    case RAWSXP: {
+      x_data = (const char*) R::rawPointer(x);
+      break;
+    }
+    default: {
+      R::warning("Unsupported data type '%s'.", R::type2char(R::Typeof(x)));
+      return NA_STRING;
+    }
+  }
+  int retval = uchardet_handle_data(handle, x_data, x_len);
+  uchardet_data_end(handle);
+  if (retval != 0) {
+    // Rf_warning("Can not handling data.");
+    return NA_STRING;
+  }
+
+  return get_charset(handle);
+}
+
+SEXP attribute_hidden do_detect_file(SEXP x, uchardet_t handle) {
+  if (x == NA_STRING) {
+    return NA_STRING;
+  }
+
+  const char* fname = R::charPointer(x);
+  std::ifstream fs(R_ExpandFileName(fname), std::ios::binary);
+  if (!fs.is_open()) {
+    R::warning("Can not open file '%s'.", fname);
+    return NA_STRING;
+  }
+
+  while (!fs.eof()) {
+    fs.read(buffer, BUFFER_SIZE);
+    std::size_t len = fs.gcount();
+    uchardet_handle_data(handle, buffer, len);
+  }
+  uchardet_data_end(handle);
+  fs.close();
+
+  return get_charset(handle);
+}
+
+template<typename T>
+SEXP attribute_hidden do_detect_vec(SEXP x, T fun) {
+  if (R::Typeof(x) != STRSXP) {
+    R::error("'x' must be character vector.");
+  }
+  R_xlen_t n = R::xlength(x);
+  SEXP res = R::Shield(R::allocVectorCharacter(n));
+  uchardet_t handle = uchardet_new();
+  for (R_len_t i = 0; i < n; ++i) {
+    R::setStringElement(res, i, fun(R::stringElement(x, i), handle));
+    uchardet_reset(handle);
+  }
+  uchardet_delete(handle);
+  return res;
+}
+
+SEXP detect_character(SEXP x) {
+  return do_detect_vec(x, do_detect_sexp);
+}
+
+SEXP detect_file(SEXP x) {
+  return do_detect_vec(x, do_detect_file);
+}
+
+SEXP detect_raw(SEXP x) {
+  if (R::Typeof(x) != RAWSXP) {
+    R::error("'x' must be raw vector.");
+  }
+  SEXP res = R::Shield(R::allocVectorCharacter(1));
+  uchardet_t handle = uchardet_new();
+  R::setStringElement(res, 0, do_detect_sexp(x, handle));
+  uchardet_delete(handle);
+  return res;
+}
+
+```
+
+
+
 ### Discussion
 
 `tidyCpp` provides a cleaner layer on top of the C API for R. That has its advantages: we find it
