@@ -1,3 +1,11 @@
+2020-10-15  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version and date
+
+	* inst/include/tidy/internals.h: Additional defines
+
+	* vignettes/motivation.Rmd: Added uchardet example
+
 2020-10-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Expanded README.md with example from 'dang'
